tests/failures/value_argument.stderr
error: system function parameters must be `CommandBuffer` or `SubWorld` references, [optioned] component references, state references, resource references, or references to structs deriving SystemResources
 --> $DIR/value_argument.rs:4:23
  |
4 | fn value_arguement(_: usize) {}
  |                       ^^^^^
