tests/failures/value_argument.rs
use legion::system;

#[system]
fn value_arguement(_: usize) {}

fn main() {}
